--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body class="container">
   <div class="wrapper">
     <nav class="top-nav">
-      <a class="home nav" href="/index.html">EH</a>
-      <a class="work nav" href="/work.html">WORK</a>
-      <a class="hello nav" href="/hello.html">HELLO</a>
+      <a class="home nav" href="index.html">EH</a>
+      <a class="work nav" href="work.html">WORK</a>
+      <a class="hello nav" href="hello.html">HELLO</a>
     </nav>
 
     <main class="main">
