--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
 
           <div class="project-card one clickable-card">
             <a class="project" href="/projects/handshake.html">
-              <img src="/images/handshake.svg" />
+              <img src="images/handshake.svg" />
               <p>Handshake App<br />UXWC Final Project</p>
             </a>
           </div>
