--- a/work.html
+++ b/work.html
@@ -27,7 +27,7 @@
         <section class="project-list">
 
           <div class="project-card one clickable-card">
-            <a class="project" href="/projects/handshake.html">
+            <a class="project" href="projects/handshake.html">
               <img src="images/handshake.svg" />
               <p>Handshake App<br />UXWC Final Project</p>
             </a>
