--- a/work.html
+++ b/work.html
@@ -27,8 +27,8 @@
         <section class="project-list">
 
           <div class="project-card one clickable-card">
-            <a class="project" href="projects/handshake.html">
-              <img src="images/handshake.svg" />
+            <a class="project" href="./projects/handshake.html">
+              <img src="./images/handshake.svg" />
               <p>Handshake App<br />UXWC Final Project</p>
             </a>
           </div>
