more link tweek on project html

--- a/projects/handshake.html
+++ b/projects/handshake.html
@@ -15,9 +15,9 @@
 <body class="container">
   <div class="wrapper">
     <nav class="top-nav">
-      <a class="home nav" href="index.html">EH</a>
-      <a class="work nav" href="work.html">WORK</a>
-      <a class="hello nav" href="hello.html">HELLO</a>
+      <a class="home nav" href="../index.html">EH</a>
+      <a class="work nav" href="../work.html">WORK</a>
+      <a class="hello nav" href="../hello.html">HELLO</a>
     </nav>
 
     <main class="main">
@@ -30,7 +30,7 @@
     <footer class="footer">
       <h3>Let's connect!</h3>
       <ul class="social-links">
-        <li><a href="https://www.linkedin.com/in/evyhaan/"><img class="li-in-bug" src="/assets/LI-In-Bug.png"></a>
+        <li><a href="https://www.linkedin.com/in/evyhaan/"><img class="li-in-bug" src="../assets/LI-In-Bug.png"></a>
         </li>
       </ul>
     </footer>
