--- a/hello.html
+++ b/hello.html
@@ -15,17 +15,17 @@
 <body class="container">
   <div class="wrapper">
     <nav class="top-nav">
-      <a class="home nav" href="index.html">EH</a>
+      <a class="home nav" href="index.html"><img src="./images/initials.svg"></a>
       <a class="work nav" href="work.html">WORK</a>
       <a class="hello nav" href="hello.html">HELLO</a>
     </nav>
 
     <main class="main">
-      <h1 class="page-header">Hello</h1>
+      <h1 class="page-header">It's nice to meet you!</h1>
       <div class="main-content">
         <section class="bio">
-          <img class="profile-pic" src="images/self-pic.jpg" />
-          <h2>Bio</h2>
+          <!-- <img class="profile-pic" src="images/self-pic.jpg" /> -->
+          <h2>A bit about me...</h2>
           <p>I enjoy making things organized, efficient, and streamlined with a little something extra to bring about a
             smile.
             <br />
@@ -44,9 +44,9 @@
             space.
             <br />
             <br />
-            An English-native child of a generation for which English came second, I’ve always been interested in how
-            concepts are communicated. There’s a power not just in words, but also in the context in which those words
-            exist. How we communicate can be empowering or excluding.
+            While English is my first language, it was one of my parents' second. So growing up, I’ve always been
+            interested in how concepts are communicated. There’s a power not just in words, but also in
+            the context in which those words exist. How we communicate can be empowering or excluding.
             <br />
             <br />
             So, here I am to write better experiences for everyone.
