--- a/projects/handshake.html
+++ b/projects/handshake.html
@@ -15,7 +15,7 @@
 <body class="container">
   <div class="wrapper">
     <nav class="top-nav">
-      <a class="home nav" href="../index.html">EH</a>
+      <a class="home nav" href="../index.html"><img src="../images/initials.svg"></a>
       <a class="work nav" href="../work.html">WORK</a>
       <a class="hello nav" href="../hello.html">HELLO</a>
     </nav>
