--- a/hello.html
+++ b/hello.html
@@ -44,9 +44,10 @@
             space.
             <br />
             <br />
-            While English is my first language, it was one of my parents' second. So growing up, I’ve always been
-            interested in how concepts are communicated. There’s a power not just in words, but also in
-            the context in which those words exist. How we communicate can be empowering or excluding.
+            While English is my native language, it was one of my parents' second. Growing up, I’ve always been
+            interested in how concepts are communicated. I am amazed at the flexibility and tickled by the nuances.
+            There’s a power not just in words, but also in the context in which those words exist. How we communicate
+            can be empowering or excluding.
             <br />
             <br />
             So, here I am to write better experiences for everyone.
