--- a/work.html
+++ b/work.html
@@ -21,7 +21,7 @@
     </nav>
 
     <main class="main">
-      <h1 class="page-header">Work</h1>
+      <h1 class="page-header">Smattering of work.</h1>
 
       <div class="main-content">
         <section class="project-list">
