--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     </nav>
 
     <main class="main">
-      <h1 class="page-header">Send a note</h1>
+      <h1 class="page-header">Leave a note</h1>
       <div class="main-content">
         <section class="contact">
           <form class="contact-form" method="post" action="mailto:evy.haan@gmail.com">
