format text of draft

--- a/projects/handshake.html
+++ b/projects/handshake.html
@@ -23,7 +23,207 @@
     <main class="main">
       <h1 class="page-header">Handshake App</h1>
       <div class="main-content">
-        <p>some body text</p>
+        <section class="project-details">
+          <h2>Project Type</h2>
+          <p>Practice design challenge</p>
+          <br />
+          <h2>Duration</h2>
+          <p>Jan 2022, 3 weeks</p>
+          <br />
+          <h2>Role</h2>
+          <p>UX writer</p>
+          <br />
+          <h2>Tools</h2>
+          <p>Figma, Trello, Google Docs/Sheets/Slides, diagrams.net</p>
+
+          <hr />
+          <h2>Overview</h2>
+          <p>Handshake is a (fictional) new project management and payments app for freelancers and business owners.
+            While still in early design iterations, a main priority is to develop and document a content strategy from
+            the outset.</p>
+          <br />
+          <p>The designer for the Handshake App provided mock-ups for an initial review with the Head of UX and VP of
+            Product. To help the designer prepare for the design review, I was tasked with updating the text to build a
+            better relationship with users. This included <i><strong></strong>developing the voice & tone for
+              Handshake</strong></i>,
+            <i><strong>creating a style guide</strong></i>, and <i><strong>editing the copy</strong></i>.
+          </p>
+          <br />
+          <p>After <i><strong>conducting a competitor analysis</strong></i> to better understand the industry and the
+            app’s niche, I
+            <i><strong>crafted a persona</strong></i> that would “be” Handshake. These helped define guiding principles
+            and guide content
+            revisions.
+          </p>
+          <br />
+          <p>The outcome: a personable, yet professional voice that is embodied in the new copy and documented for
+            continued development.
+          </p>
+
+          <figure class="proj-img-single">
+            <img src="../images/bananadance.gif" />
+            <figcaption>
+              <p>caption text that is this long</p>
+            </figcaption>
+          </figure>
+
+          <hr />
+          <h2>Challenge</h2>
+          <p>Handshake supports the working relationship between freelancers and business owners. Although both parties
+            use the same app, they have different needs. Freelancers are the primary audience, using the app for billing
+            and progress reporting. Business owners use the app to track progress and make payments. Within the app,
+            both types of user can define project features, negotiate budget and timeline, and send messages.
+          </p>
+          <br />
+          <p>The challenge is to design UX copy that is consistent across both user flows while still being flexible in
+            supporting the unique tasks of both types of users.
+          </p>
+
+          <hr />
+          <h2>Solution</h2>
+          <p>The very first thing I did was walk through each screen. I tried to determine what was the goal of the
+            page. I wrote all questions and thoughts that came to mind about UI elements, interaction flows, and the
+            clarity of the information presented.</p>
+          <br />
+          <br />
+          <h3>DISCOVERY</h3>
+          <br />
+          <p>I was unfamiliar with the freelancing industry. I chose to conduct a competitive analysis, to find out:</p>
+          <br />
+          <p class="indent">1. the language used in the industry by competitor apps and end-users</p>
+          <p class="indent">2. common formatting or styling challenges to anticipate</p>
+          <p class="indent">3. if/how each competitor app conveyed the personality of their app</p>
+          <p class="indent">4. how the end-users connected with that personality</p>
+          <br />
+          <p>I searched for competitor apps highlighted in freelancer resource blogs. Three apps stood out as direct
+            competitors based on 1) audience, 2) primary function, 3) features, and 4) popularity. These were Honeybook,
+            Fiverr Workspace, and Upwork.</p>
+          <br />
+          <p>First, I stepped through any freely accessible onboarding steps or features to get a feel for the app’s
+            personality and piece together a rationale behind their content design decisions.</p>
+          <br />
+          <p>Next, I scanned reviews of the app over the previous year to understand how users described themselves,
+            their collaboration partners, and their work. I also noted points of friction or delight related to specific
+            copy or personality traits.</p>
+          <br />
+          <p>A major finding was that freelancers often described themselves as running their own business. This
+            blurring of the line between Handshake’s audiences simplified the process for developing character traits
+            for the app.</p>
+          <br />
+          <p>Another finding was that only one competitor had an obvious, well-defined product persona. Its consistent
+            presence was effective. This meant that defining a clear voice would be crucial for Handshake.</p>
+          <br />
+          <br />
+          <h3>IDEATION</h3>
+          <br />
+          <h4>Voice</h4>
+          <p>I created “Casey”, a product persona to embody the Handshake app. If the user was their own CEO, Casey was
+            to be their executive assistant. Casey would provide only the right information in the right amount at the
+            right time, while also being available for extra support as needed. Casey is someone who is organized and
+            transparent while being approachable with a bright positivity.</p>
+          <br />
+          <br />
+          <h4>Tone</h4>
+          <p>I defined two tonal ranges to show how Casey might adapt to user needs. The first range was
+            supporting-to-guiding, and the second from playful-to-serious. Intersecting these ranges, I charted 13
+            interface touchpoints a user would experience.</p>
+          <br />
+          <p>The majority of touchpoints lean toward being supporting, giving the user the most control, and only taking
+            the lead when asked or needed. The touchpoints were equal in the playful-to-serious range. Most interactions
+            that could be playful were either short-lived or infrequent, i.e. feature tours or empty states. Conversely,
+            informational copy needed to be ambient, while help or warning copy needed to be direct.</p>
+          <br />
+          <h4>Style Guide</h4>
+          <p>Getting Handshake’s personality right was important. Conveying it consistently would make or break the
+            relationship with the user. Consistency builds trust and confidence.</p>
+          <br />
+          <p>Considering the early stage of the product, I considered long-term impacts. Two questions guided my
+            decisions:</p>
+          <br />
+          <p class="indent">1. How can I develop guidelines that both enforce consistency in this early iteration while
+            leaving room
+            for
+            Handshake to mature over time?</p>
+          <p class="indent">2. What can I plan for now that will ease future style and formatting challenges?</p>
+          <br />
+          <p>To answer the first question, the governing rules for component styles and copy formatting were fairly
+            banal. They are concise without being restrictive. I included examples for easy reference.</p>
+          <br />
+          <p>For the second question, I kept in mind potential new features, regional markets, translation and
+            localization, inclusivity, and accessibility. I allowed these to guide current decisions for the present
+            presentation of information.</p>
+          <br />
+          <br />
+          <h3>DESIGN</h3>
+          <br />
+          <h4>Mockup text revisions</h4>
+          <p>It was finally time to revise the text. I did this in three stages:</p>
+          <br />
+          <p class="indent">1. A first pass to speed through and change all the text. This rephrasing exercise helped me
+            grasp what the
+            designer intended to convey by each section of text.</p>
+          <p class="indent">2. A second pass to revise the text and copy components within the voice and style
+            guidelines.</p>
+          <p class="indent">3. A third pass to make any final adjustments, revisit the intended meaning for each screen,
+            and review for
+            a cohesive personality presence across the app.</p>
+          <br />
+          <br />
+          //// insert before/after screenshot examples & descriptions ////
+          <br />
+          <br />
+          <h3>WRAP-UP</h3>
+          <br />
+          <h4>Managing team relationships</h4>
+          <p>Where interactions and flows were not clear, I asked for clarity from the designer or product manager. I
+            proposed solutions to friction points or anticipated feature integration issues. I also highlighted where we
+            may need to cross-collaborate with other teams, bringing in spokespeople from legal, marketing, engineering,
+            localization, and research. Their expertise would be critical to inform the decisions and forecast
+            feasibility, especially at this early stage.</p>
+          <br />
+          <h4>Testing & Analytics</h4>
+          <p>While I did not create a full testing strategy, I came across a few elements of copy that gave me pause
+            about the best text to choose. I made decisions based on quick word usage via Google Analytics, but noted
+            alternate options that may be worth A/B testing.</p>
+          <br />
+          <h4>Documentation</h4>
+          <h5>Project Board</h5>
+          <p>To track project progress, I created a project board on Trello. Breaking down the entire project into
+            manageable tasks helped keep the project moving, and gave me a space to organize to-dos and celebrate
+            milestones.</p>
+          <br />
+          <h5>Organization</h5>
+          <p>Throughout the process, I maintained a Google Drive directory that included all the files relevant to the
+            project. This provided visibility to all documents, processes, and decisions. With this, any team member
+            could feel confident about contributing to the project.</p>
+          <br />
+          <h5>Versioning</h5>
+          <p>As I revised copy, some decisions I had made in the style guide were no longer applicable. This arose from
+            how the designs introduced concepts, new concept taxonomies I hadn’t yet anticipated, or the constraints of
+            the available space. I didn’t want to simply change the style guide. I wanted to document the changes and
+            provide a rationale to serve as a reference. I introduced document versioning to govern protocols for making
+            changes from minor typo fixes, to large revisions requiring new releases.</p>
+
+          <hr />
+          <h2>Reflection</h2>
+          <p>
+            This was the final project for the Fundamentals of UX Writing course offered by the UX Content Collective,
+            and my first real sleeves-rolled-up plunge into the daily work of a UX writer. The aim was to update the
+            copy to better connect with and serve the user, without changing interactions or flows.</p>
+          <br />
+          <br />
+          <p>What I found most challenging was working within concept designs that were incomplete. Often the
+            interactions and flows had glaring flaws. For being a solo project, this was a great exercise in team
+            collaboration. It made me consider how I would want to communicate with my team about product decisions
+            from the position of their expertise, and how important it was to articulate my own design decisions.</p>
+          <br />
+          <br />
+          <p>What surprised me was actually seeing the impact of content-early design at the start of a product. The
+            mock-ups already existed. But there were many times I wanted to change the entire layout to make the copy
+            more organized on the screens. It made me appreciate the importance of being involved in defining the
+            information hierarchy and user research processes.</p>
+
+        </section>
       </div>
     </main>
 
