--- a/work.html
+++ b/work.html
@@ -29,13 +29,13 @@
           <div class="project-card one clickable-card">
             <a class="project" href="./projects/handshake.html">
               <img src="./images/handshake.svg" />
-              <p>Handshake App<br />UXWC Final Project</p>
+              <h3>Handshake App<br />UXWC Final Project</h3>
             </a>
           </div>
 
           <div class="project-card two">
             <div class="project">
-              <p>More to come!</p>
+              <h3>More to come!</h3>
             </div>
           </div>
 
