--- a/projects/handshake.html
+++ b/projects/handshake.html
@@ -44,10 +44,9 @@
           <br />
           <p>The designer for the Handshake App provided mock-ups for an initial review with the Head of UX and VP of
             Product. To help the designer prepare for the design review, I was tasked with updating the text to build a
-            better relationship with users. This included <i><strong></strong>developing the voice & tone for
-              Handshake</strong></i>,
-            <i><strong>creating a style guide</strong></i>, and <i><strong>editing the copy</strong></i>.
-          </p>
+            better relationship with users. This included <i><strong>developing the voice & tone for
+                Handshake</strong></i>, <i><strong>creating a style guide</strong></i>, and <i><strong>editing the
+                copy</strong></i>.</p>
           <br />
           <p>After <i><strong>conducting a competitor analysis</strong></i> to better understand the industry and the
             app’s niche, I
@@ -57,33 +56,23 @@
           </p>
           <br />
           <p>The outcome: a personable, yet professional voice that is embodied in the new copy and documented for
-            continued development.
-          </p>
-
-          <figure class="proj-img-single">
-            <img src="../images/bananadance.gif" />
-            <figcaption>
-              <p>caption text that is this long</p>
-            </figcaption>
-          </figure>
+            continued development.</p>
 
           <hr />
           <h2>Challenge</h2>
           <p>Handshake supports the working relationship between freelancers and business owners. Although both parties
             use the same app, they have different needs. Freelancers are the primary audience, using the app for billing
             and progress reporting. Business owners use the app to track progress and make payments. Within the app,
-            both types of user can define project features, negotiate budget and timeline, and send messages.
-          </p>
+            both types of user can define project features, negotiate budget and timeline, and send messages.</p>
           <br />
           <p>The challenge is to design UX copy that is consistent across both user flows while still being flexible in
-            supporting the unique tasks of both types of users.
-          </p>
+            supporting the unique tasks of both types of users.</p>
 
           <hr />
           <h2>Solution</h2>
-          <p>The very first thing I did was walk through each screen. I tried to determine what was the goal of the
-            page. I wrote all questions and thoughts that came to mind about UI elements, interaction flows, and the
-            clarity of the information presented.</p>
+          <p>The very first thing I did was walk through the screens and to determine the goal for each. I
+            wrote all questions and thoughts that came to mind about UI elements, interaction flows, and the clarity of
+            the information presented.</p>
           <br />
           <br />
           <h3>DISCOVERY</h3>
@@ -96,8 +85,8 @@
           <p class="indent">4. how the end-users connected with that personality</p>
           <br />
           <p>I searched for competitor apps highlighted in freelancer resource blogs. Three apps stood out as direct
-            competitors based on 1) audience, 2) primary function, 3) features, and 4) popularity. These were Honeybook,
-            Fiverr Workspace, and Upwork.</p>
+            competitors based on audience, primary function, features, and popularity. These were Honeybook, Fiverr
+            Workspace, and Upwork.</p>
           <br />
           <p>First, I stepped through any freely accessible onboarding steps or features to get a feel for the app’s
             personality and piece together a rationale behind their content design decisions.</p>
@@ -119,15 +108,59 @@
           <h4>Voice</h4>
           <p>I created “Casey”, a product persona to embody the Handshake app. If the user was their own CEO, Casey was
             to be their executive assistant. Casey would provide only the right information in the right amount at the
-            right time, while also being available for extra support as needed. Casey is someone who is organized and
-            transparent while being approachable with a bright positivity.</p>
-          <br />
-          <br />
+            right time, while also being available for extra support as needed. Casey is someone who is
+            <i><strong>organized</strong></i> and
+            <i><strong>transparent</strong></i> while being <i><strong>approachable</strong></i> with a
+            <i><strong>bright</strong></i> positivity.
+          </p>
+
+          <div class="img-container">
+            <div class="multi-img">
+              <figure class="proj-img-double">
+                <img src="../images/HSvoice_who_is.png" />
+                <figcaption>
+                  <p class="caption">Slide 1. Meet Casey, the persona for Handshake.</p>
+                </figcaption>
+              </figure>
+
+              <figure class="proj-img-double">
+                <img src="../images/HSvoice_if_you_met.png" />
+                <figcaption>
+                  <p class="caption">Slide 2. The voice charactorists of Casey.</p>
+                </figcaption>
+              </figure>
+
+              <figure class="proj-img-double">
+                <img src="../images/HSvoice_sounds_like.png" />
+                <figcaption>
+                  <p class="caption">Slide 3. Guiding principles to sound like Casey.</p>
+                </figcaption>
+              </figure>
+
+              <figure class="proj-img-double">
+                <img src="../images/HSvoice_looks_like.png" />
+                <figcaption>
+                  <p class="caption">Slide 4. Defining Casey's tonal ranges.</p>
+                </figcaption>
+              </figure>
+            </div>
+            <p>Fig 1. Slide deck introducing Casey, the voice & tone of Handshake</p>
+          </div>
+
           <h4>Tone</h4>
           <p>I defined two tonal ranges to show how Casey might adapt to user needs. The first range was
-            supporting-to-guiding, and the second from playful-to-serious. Intersecting these ranges, I charted 13
-            interface touchpoints a user would experience.</p>
-          <br />
+            <i><strong>supporting-to-guiding</strong></i>, and the second from
+            <i><strong>playful-to-serious</strong></i>. Intersecting these ranges, I charted 13
+            interface touchpoints a user would experience.
+          </p>
+
+          <figure class="proj-img-single">
+            <img src="../images/ToneMap.drawio.png" />
+            <figcaption>
+              <p>Fig 2. Map of touchpoints across intersecting tonal ranges.</p>
+            </figcaption>
+          </figure>
+
           <p>The majority of touchpoints lean toward being supporting, giving the user the most control, and only taking
             the lead when asked or needed. The touchpoints were equal in the playful-to-serious range. Most interactions
             that could be playful were either short-lived or infrequent, i.e. feature tours or empty states. Conversely,
@@ -141,35 +174,89 @@
             decisions:</p>
           <br />
           <p class="indent">1. How can I develop guidelines that both enforce consistency in this early iteration while
-            leaving room
-            for
-            Handshake to mature over time?</p>
+            leaving room for Handshake to mature over time?</p>
           <p class="indent">2. What can I plan for now that will ease future style and formatting challenges?</p>
           <br />
-          <p>To answer the first question, the governing rules for component styles and copy formatting were fairly
+          <p>To answer the first question, the governing rules for component styles and copy formatting stayed fairly
             banal. They are concise without being restrictive. I included examples for easy reference.</p>
-          <br />
+
+          <figure class="proj-img-single">
+            <img src="../images/HSstyleguide_button.png" />
+            <figcaption>
+              <p class="caption">Fig 3. Do's and Don'ts for a Button element with examples.</p>
+            </figcaption>
+          </figure>
+
           <p>For the second question, I kept in mind potential new features, regional markets, translation and
             localization, inclusivity, and accessibility. I allowed these to guide current decisions for the present
             presentation of information.</p>
-          <br />
-          <br />
+
+          <figure class="proj-img-single">
+            <img src="../images/HSstyleguide_longform_date.png" />
+            <figcaption>
+              <p class="caption">Fig 4. Defining date guidelines for US markets now while anticipating future growth
+                into EU markets.
+              </p>
+            </figcaption>
+          </figure>
+
           <h3>DESIGN</h3>
           <br />
           <h4>Mockup text revisions</h4>
           <p>It was finally time to revise the text. I did this in three stages:</p>
           <br />
           <p class="indent">1. A first pass to speed through and change all the text. This rephrasing exercise helped me
-            grasp what the
-            designer intended to convey by each section of text.</p>
+            grasp what the designer intended to convey by each section of text.</p>
           <p class="indent">2. A second pass to revise the text and copy components within the voice and style
             guidelines.</p>
           <p class="indent">3. A third pass to make any final adjustments, revisit the intended meaning for each screen,
-            and review for
-            a cohesive personality presence across the app.</p>
+            and review for a cohesive personality presence across the app.</p>
           <br />
           <br />
-          //// insert before/after screenshot examples & descriptions ////
+          <div class="img-container">
+            <div class="multi-img">
+              <figure class="proj-img-double">
+                <img src="../images/welcome_before.png" />
+                <figcaption>
+                  <p class="caption">Before</p>
+                </figcaption>
+              </figure>
+
+              <figure class="proj-img-double">
+                <img src="../images/welcome_after.png" />
+                <figcaption>
+                  <p class="caption">After</p>
+                </figcaption>
+              </figure>
+            </div>
+            <p>Fig 5. Welcome Screen</p>
+          </div>
+
+          <div class="img-container">
+            <div class="multi-img">
+              <figure class="proj-img-double">
+                <img src="../images/sign_in_up_before.png" />
+                <figcaption>
+                  <p class="caption">Before</p>
+                </figcaption>
+              </figure>
+
+              <figure class="proj-img-double">
+                <img src="../images/sign_in_after.png" />
+                <figcaption>
+                  <p class="caption">After</p>
+                </figcaption>
+              </figure>
+
+              <figure class="proj-img-double">
+                <img src="../images/sign_up_after.png" />
+                <figcaption>
+                  <p class="caption">After</p>
+                </figcaption>
+              </figure>
+            </div>
+            <p>Fig 5. Welcome Screen</p>
+          </div>
           <br />
           <br />
           <h3>WRAP-UP</h3>
@@ -191,31 +278,38 @@
           <p>To track project progress, I created a project board on Trello. Breaking down the entire project into
             manageable tasks helped keep the project moving, and gave me a space to organize to-dos and celebrate
             milestones.</p>
-          <br />
+
+          <figure class="proj-img-single">
+            <img src="../images/HS_trello_process.png" />
+            <figcaption>
+              <p class="caption">Handshake App project board on Trello.</p>
+            </figcaption>
+          </figure>
+
           <h5>Organization</h5>
           <p>Throughout the process, I maintained a Google Drive directory that included all the files relevant to the
             project. This provided visibility to all documents, processes, and decisions. With this, any team member
             could feel confident about contributing to the project.</p>
           <br />
           <h5>Versioning</h5>
-          <p>As I revised copy, some decisions I had made in the style guide were no longer applicable. This arose from
-            how the designs introduced concepts, new concept taxonomies I hadn’t yet anticipated, or the constraints of
-            the available space. I didn’t want to simply change the style guide. I wanted to document the changes and
-            provide a rationale to serve as a reference. I introduced document versioning to govern protocols for making
-            changes from minor typo fixes, to large revisions requiring new releases.</p>
+          <p>As I revised copy, some decisions I had made in the style guide were no longer applicable. I didn’t want to
+            simply change the style guide. I wanted to document the changes and provide a rationale to serve as a
+            reference. I introduced document versioning to govern protocols for making changes ranging from minor typo
+            fixes, to large revisions requiring new releases.</p>
 
           <hr />
           <h2>Reflection</h2>
           <p>
-            This was the final project for the Fundamentals of UX Writing course offered by the UX Content Collective,
+            This was the final project for the Fundamentals of UX Writing course offered by the UX Content Collective
             and my first real sleeves-rolled-up plunge into the daily work of a UX writer. The aim was to update the
             copy to better connect with and serve the user, without changing interactions or flows.</p>
           <br />
           <br />
-          <p>What I found most challenging was working within concept designs that were incomplete. Often the
+          <p>What I found most challenging was working within concept designs that were incomplete. Oftentimes the
             interactions and flows had glaring flaws. For being a solo project, this was a great exercise in team
-            collaboration. It made me consider how I would want to communicate with my team about product decisions
-            from the position of their expertise, and how important it was to articulate my own design decisions.</p>
+            collaboration. It made me consider how I would want to communicate with my team about product decisions. It
+            also made me realize how important it was to articulate my own design decisions.
+          </p>
           <br />
           <br />
           <p>What surprised me was actually seeing the impact of content-early design at the start of a product. The
