change top image on handshake proj

--- a/work.html
+++ b/work.html
@@ -29,7 +29,7 @@
           <div class="project-card one clickable-card">
             <a class="project" href="./projects/handshake.html">
               <img src="./images/handshake.svg" />
-              <h3>Handshake App<br />UXWC Final Project</h3>
+              <h3>Handshake App<br />Final Project - UX Content Collective</h3>
             </a>
           </div>
 
