--- a/projects/handshake.html
+++ b/projects/handshake.html
@@ -24,11 +24,14 @@
       <h1 class="page-header">Handshake App</h1>
       <div class="main-content">
         <section class="project-details">
+          <div class="hero">
+            <img src="../images/handshake.svg" />
+          </div>
           <h2>Project Type</h2>
           <p>Practice design challenge</p>
           <br />
           <h2>Duration</h2>
-          <p>Jan 2022, 3 weeks</p>
+          <p>Jan - Feb 2022</p>
           <br />
           <h2>Role</h2>
           <p>UX writer</p>
