tackle mini case study

--- a/projects/handshake.html
+++ b/projects/handshake.html
@@ -34,7 +34,7 @@
           <h2>Project Type</h2>
           <p>Practice design challenge</p>
           <br />
-          <h2>Duration</h2>
+          <h2>Timeline</h2>
           <p>Jan - Feb 2022</p>
           <br />
           <h2>Role</h2>
