--- a/work.html
+++ b/work.html
@@ -26,14 +26,20 @@
       <div class="main-content">
         <section class="project-list">
 
-          <div class="project-card one clickable-card">
+          <div class="project-card clickable-card">
             <a class="project" href="./projects/handshake.html">
               <img src="./images/handshake.svg" />
               <h3>Handshake App<br />Final Project - UX Content Collective</h3>
             </a>
           </div>
 
-          <div class="project-card two">
+          <div class="project-card clickable-card">
+            <a class="project" href="./projects/tackle.html">
+              <h3>Tackle.io<br />Web Form Component Review & Recommondations</h3>
+            </a>
+          </div>
+
+          <div class="project-card">
             <div class="project">
               <h3>More to come!</h3>
             </div>
