--- a/work.html
+++ b/work.html
@@ -27,6 +27,12 @@
         <section class="project-list">
 
           <div class="project-card clickable-card">
+            <a class="project" href="./projects/dailyuxwritingchallenge.html">
+              <h3>Daily UX Writing Challenge</h3>
+            </a>
+          </div>
+
+          <div class="project-card clickable-card">
             <a class="project" href="./projects/handshake.html">
               <img src="./images/handshake.svg" />
               <h3>Handshake App<br />Final Project - UX Content Collective</h3>
