fix img src refs

--- a/projects/dailyuxwritingchallenge.html
+++ b/projects/dailyuxwritingchallenge.html
@@ -46,7 +46,7 @@
           <br>
           <div class="centered-img-container">
             <figure>
-              <img class="framed" src="../images/duxwc/DUXWC_1.svg" />
+              <img class="framed" src="../images/duxwc/duxwc_1.svg" />
               <figcaption>Fig 1. Flight cancellation notification.</figcaption>
             </figure>
           </div>
@@ -86,7 +86,7 @@
           <br>
           <div class="centered-img-container">
             <figure>
-              <img class="framed" src="../images/duxwc/DUXWC_2.svg" />
+              <img class="framed" src="../images/duxwc/duxwc_2.svg" />
               <figcaption>Fig 1. Sports app promotional screen.</figcaption>
             </figure>
           </div>
