--- a/projects/dailyuxwritingchallenge.html
+++ b/projects/dailyuxwritingchallenge.html
@@ -87,7 +87,7 @@
           <div class="centered-img-container">
             <figure>
               <img class="framed" src="../images/duxwc/duxwc_2.svg" />
-              <figcaption>Fig 1. Sports app promotional screen.</figcaption>
+              <figcaption>Fig 2. Sports app promotional screen.</figcaption>
             </figure>
           </div>
           <br>
@@ -100,6 +100,32 @@
             low-effort relationship with the app. Set it and we'll never let you forget it (in a good way).</p>
           <br>
           <p>The CTA cuts right into the action to get them set up.</p>
+          <!-- Day 3 -->
+          <hr>
+          <h2>Day 3</h2>
+          <br>
+          <p><strong>Scenario:</strong> The user entered the wrong email address to sign in to their account.</p>
+          <br>
+          <p><strong>Challenge:</strong> Tell the user to enter the right email.</p>
+          <br>
+          <p>40 characters max</p>
+          <br>
+          <p><strong>Solution:</strong></p>
+          <br>
+          <div class="centered-img-container">
+            <figure>
+              <img class="framed" src="../images/duxwc/duxwc_3.svg" />
+              <figcaption>Fig 3. Incorrect email error microcopy.</figcaption>
+            </figure>
+          </div>
+          <br>
+          <p><strong>Explanation:</strong></p>
+          <br>
+          <p>Is it the wrong email? Or is the email wrong? We don't really know. All we know is that it doesn't match
+            any email in our database.</p>
+          <br>
+          <p>So instead I tell the user what the problem is and what to do next. I keep it brief but conversational. The
+            tone is direct and neutral, not negative or accusatory.</p>
 
         </section>
       </div>
